# compiler

./: .gitignore  Cargo.toml  README.md
compiler/: Cargo.toml
compiler/crates/analyze/: Cargo.toml
compiler/crates/analyze/src/: addr.rs  def.rs  lib.rs  utils.rs
compiler/crates/analyze_def/: Cargo.toml
compiler/crates/analyze_def/src/: lib.rs
compiler/crates/codegen/: Cargo.toml
compiler/crates/codegen/src/: lib.rs
compiler/crates/lirgen/: Cargo.toml
compiler/crates/lirgen/src/: gen.rs  lib.rs
compiler/crates/lirgen_ir/: Cargo.toml
compiler/crates/lirgen_ir/src/: ir.rs
compiler/crates/lirgen_ir/src/ir/: add.rs  and.rs  beq.rs  ble.rs  blt.rs  bne.rs  call.rs  fload.rs  fsave.rs  in.rs  jmp.rs  label.rs  li.rs  lw.rs  or.rs  out.rs  pop.rs  push.rs  return.rs  shiftl.rs  shiftr.rs  shiftra.rs  sub.rs  sw.rs  varalloc.rs  varfree.rs  xor.rs
compiler/crates/parse/: Cargo.toml  build.rs
compiler/crates/parse/src/: lib.rs
compiler/crates/parse/tests/: test.rs  utils.rs
compiler/crates/parse/tests/success/: testcase_01.txt
compiler/crates/parse_ast/: Cargo.toml
compiler/crates/parse_ast/src/: ast.rs  lib.rs  utils.rs
compiler/crates/parse_ast/src/ast/: add.rs  argument.rs  argument_def.rs  assign.rs  bit_and.rs  bit_or.rs  bit_shift.rs  bit_xor.rs  block.rs  call.rs  cond.rs  const_decl.rs  dev_io.rs  expr.rs  for.rs  func_def.rs  if.rs  logic.rs  logic_and.rs  logic_or.rs  program.rs  stmt.rs  top.rs  toplevel.rs  value.rs  var_decl.rs  while.rs
compiler/crates/parse_syntax/: Cargo.toml
compiler/crates/parse_syntax/src/: lib.rs
compiler/crates/parse_syntax/tests/: test.rs  utils.rs
compiler/src/: lib.rs
compiler/tests/: test.rs
compiler/tests/fail/: testcase_01.txt  testcase_02.txt
compiler/tests/success/: testcase_01.sb  testcase_01.txt  testcase_02.sb  testcase_02.txt  testcase_03.sb  testcase_03.txt  testcase_04.sb  testcase_04.txt  testcase_06.sb
examples/const/: main.sb  out.asm
examples/fizzbuzz/: main.sb  out.asm
examples/helloworld/: main.sb  out.asm
src/: main.rs
