[package]
name = "sb_compiler_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
sb_compiler = { path = "./compiler" }

[workspace]
resolver = "2"
members = [
    "./compiler",
]

[workspace.dependencies]
anyhow = "1.0.93"
thiserror = "2.0.3"
serde = "1.0.215"
copager = { git = "https://github.com/Tsukuba-Programming-Lab/Copager", rev = "0e26c8373c5a0bff919d807026f141224e19a036" }
