[package]
name = "sb_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
sb_compiler_parse = { path = "./crates/parse" }
sb_compiler_analyze = { path = "./crates/analyze" }
sb_compiler_lirgen = { path = "./crates/lirgen" }
sb_compiler_codegen = { path = "./crates/codegen" }
