[package]
name = "sb_compiler_parse_syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
copager = { workspace = true, features = ["derive", "template", "lalr1"] }

[dev-dependencies]
copager = { workspace = true, features = ["derive", "void"] }
